--- a/templates/login.html
+++ b/templates/login.html
@@ -89,7 +89,8 @@
 </div>
 <div class="login-box">
     <h1> Login</h1>
-    <form method="POST" action="{{ url_for('login') }}">
+    <form method="POST" action="{{ url_for('auth.login') }}">
+
         <label>Username:</label>
         <input type="text" name="username" placeholder="Enter your username" required>
         <label>Password:</label>
