--- a/templates/index2.html
+++ b/templates/index2.html
@@ -231,7 +231,8 @@
                 direction: $("input[name='direction']:checked").val(),
                 duration: $('#duration').val(),
                 dataSize: $('#dataSize').val(),
-                dataUnit: $('#dataUnit').val()
+                dataUnit: $('#dataUnit').val(),
+                autoTelnet: true
             };
 
             // Validation for optional fields
