--- a/templates/qostype.html
+++ b/templates/qostype.html
@@ -446,7 +446,7 @@
                 </div>
                 <p class="test-desc">Measure priority of control packets (ARP, DHCP, ICMP) under load.</p>
                 <div class="test-actions">
-                    <button class="btn"><i class="fas fa-search"></i> Run Test</button>
+                  <a href="{{ url_for('control.control_packets') }}" class="btn btn-custom">Run Test</a>
                     <i class="fas fa-ellipsis-v" style="opacity: 0.5; cursor: pointer;"></i>
                 </div>
             </div>
